Persist modified policies

--- a/data-vault/src/main/res/layout/credential_editor_layout.xml
+++ b/data-vault/src/main/res/layout/credential_editor_layout.xml
@@ -3,31 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-
-    <!--<LinearLayout
-        android:id="@+id/accessModeContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:text="Access mode"/>
-
-        <Spinner
-            android:id="@+id/accessModeSpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:entries="@array/access_modes"/>
-    </LinearLayout>-->
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -58,6 +38,7 @@
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/ButtonGreenRounded"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:text="Ok"/>
@@ -67,6 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
+            style="@style/ButtonRedRounded"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@id/saveButton"
             android:text="Cancel"/>
