--- a/data-vault/src/main/res/layout/access_control_management_fragment.xml
+++ b/data-vault/src/main/res/layout/access_control_management_fragment.xml
@@ -39,13 +39,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Size"
-                    android:layout_marginRight="20dp"/>
+                    android:layout_marginRight="15dp"/>
 
                 <TextView
                     android:id="@+id/fileSizeTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="3.4 MB"/>
+                    android:text="0.0 MB"/>
             </LinearLayout>
 
             <LinearLayout
@@ -58,7 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Last modified"
-                    android:layout_marginRight="20dp"/>
+                    android:layout_marginRight="15dp"/>
 
                 <TextView
                     android:id="@+id/lastModifiedTextView"
@@ -67,11 +67,11 @@
                     android:text="01-02-2022"/>
             </LinearLayout>
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/moreMetadataTextview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="more"/>
+                android:text="more"/>-->
         </LinearLayout>
 
         <Button
@@ -79,25 +79,10 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="Add Policy"
+            style="@style/ButtonWhiteRounded"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-   <!-- <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/policyEditorHeader"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        android:padding="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Edit policy rules"
-            android:textSize="15sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
     <ScrollView
         android:layout_width="match_parent"
@@ -126,6 +111,7 @@
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/ButtonGreenRounded"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:text="Save"/>
@@ -134,6 +120,7 @@
             android:id="@+id/cancelButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/ButtonRedRounded"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@id/saveButton"
             android:layout_marginRight="30dp"
