--- a/data-vault/src/main/res/layout/policy_layout.xml
+++ b/data-vault/src/main/res/layout/policy_layout.xml
@@ -39,6 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="Add Rule"
+            style="@style/ButtonWhiteRounded"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
