Sub folders in vault browser

--- a/data-vault/src/main/res/layout/access_control_management_fragment.xml
+++ b/data-vault/src/main/res/layout/access_control_management_fragment.xml
@@ -95,7 +95,9 @@
             android:id="@+id/policyContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:showDividers="middle"
+            android:divider="@drawable/divider">
         </LinearLayout>
     </ScrollView>
 
