Added fragments to atomic swap activity with navigation

--- a/atomic-swap/src/main/res/menu/atomic_swap_menu.xml
+++ b/atomic-swap/src/main/res/menu/atomic_swap_menu.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/navigation_wallet"
+        android:icon="@drawable/ic_balance_wallet"
+        android:title="@string/title_wallet" />
+
+    <item
+        android:id="@+id/navigation_swap"
+        android:icon="@drawable/ic_currency_exchange"
+        android:title="@string/title_swap" />
+
 </menu>
