--- a/data-vault/src/main/res/layout/entry_layout.xml
+++ b/data-vault/src/main/res/layout/entry_layout.xml
@@ -17,7 +17,7 @@
     <LinearLayout
         android:id="@+id/spinnerGroup"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"
         android:visibility="gone">
