--- a/valuetransfer/src/main/res/menu/exchange_options.xml
+++ b/valuetransfer/src/main/res/menu/exchange_options.xml
@@ -20,4 +20,8 @@
         android:id="@+id/actionRequestTransferContact"
         android:icon="@drawable/ic_request"
         android:title="@string/menu_exchange_transfer_request" />
+    <item
+        android:id="@+id/actionPaymentRequest"
+        android:icon="@drawable/ic_save"
+        android:title="@string/menu_exchange_payment_request" />
 </menu>
