Added an alert when trade offered received

--- a/atomic-swap/src/main/res/layout/fragment_peers.xml
+++ b/atomic-swap/src/main/res/layout/fragment_peers.xml
@@ -35,8 +35,10 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/info"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="156dp" />
 
     <ImageView
         android:id="@+id/imgEmpty"
@@ -48,4 +50,13 @@
         app:layout_constraintTop_toBottomOf="@id/info"
         app:layout_constraintBottom_toBottomOf="parent"
         app:tint="@color/mild_gray" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="click me"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
