--- a/valuetransfer/src/main/res/layout/capture_activity.xml
+++ b/valuetransfer/src/main/res/layout/capture_activity.xml
@@ -8,6 +8,7 @@
     android:paddingHorizontal="12dp">
 
     <TextView
+        android:id="@+id/tvScanTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/dialog_title_identity_onboarding_scan"
