--- a/atomic-swap/src/main/res/layout/fragment_atomic_swap.xml
+++ b/atomic-swap/src/main/res/layout/fragment_atomic_swap.xml
@@ -15,27 +15,47 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/fromCurrencyInput"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="numberDecimal" />
 
             <Spinner
                 android:id="@+id/fromCurrencySpinner"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:layout_height="match_parent" />
 
-            <ImageView
-                android:layout_width="wrap_content"
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_arrow_forward_black" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp">
+
+            <EditText
+                android:id="@+id/toCurrencyInput"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:src="@drawable/ic_arrow_forward_black" />
+                android:layout_weight="1"
+                android:inputType="numberDecimal" />
 
             <Spinner
                 android:id="@+id/toCurrencySpinner"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
+                android:layout_height="match_parent" />
         </LinearLayout>
 
         <LinearLayout
