--- a/trustchain-explorer/src/main/res/navigation/nav_graph_explorer.xml
+++ b/trustchain-explorer/src/main/res/navigation/nav_graph_explorer.xml
@@ -11,10 +11,10 @@
         <action
             android:id="@+id/action_peersFragment_to_blocksFragment"
             app:destination="@id/blocksFragment"
-            app:enterAnim="@anim/fragment_open_enter"
-            app:exitAnim="@anim/fragment_open_exit"
-            app:popEnterAnim="@anim/fragment_close_enter"
-            app:popExitAnim="@anim/fragment_close_exit" />
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/fade_out" />
     </fragment>
     <fragment
         android:id="@+id/usersFragment"
@@ -23,10 +23,10 @@
         <action
             android:id="@+id/action_usersFragment_to_blocksFragment"
             app:destination="@id/blocksFragment"
-            app:enterAnim="@anim/fragment_open_enter"
-            app:exitAnim="@anim/fragment_open_exit"
-            app:popEnterAnim="@anim/fragment_close_enter"
-            app:popExitAnim="@anim/fragment_close_exit" />
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/fade_out" />
     </fragment>
     <fragment
         android:id="@+id/blocksFragment"
