--- a/trustchain-payloadgenerator/src/main/res/navigation/nav_graph_payloadgenerator.xml
+++ b/trustchain-payloadgenerator/src/main/res/navigation/nav_graph_payloadgenerator.xml
@@ -11,8 +11,8 @@
         <action
             android:id="@+id/action_payloadFragment_to_payloadCreateFragment"
             app:destination="@id/payloadCreateFragment"
-            app:enterAnim="@anim/fragment_fade_enter"
-            app:exitAnim="@anim/fragment_close_exit" />
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out" />
     </fragment>
     <fragment
         android:id="@+id/payloadCreateFragment"
@@ -21,8 +21,8 @@
         <action
             android:id="@+id/action_payloadCreateFragment_to_payloadFragment"
             app:destination="@id/payloadFragment"
-            app:enterAnim="@anim/fragment_close_enter"
-            app:exitAnim="@anim/fragment_close_exit"
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
             app:popUpTo="@id/payloadFragment"
             app:popUpToInclusive="true" />
     </fragment>
